--- a/index.html
+++ b/index.html
@@ -12,10 +12,21 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script>
+    <!-- <script>
       
       let vh = window.innerHeight * 0.01;
       document.documentElement.style.setProperty('--vh', `${vh}px`);
+    </script> -->
+    <script>
+      function setVH() {
+        let vh = window.innerHeight * 0.01;
+        document.documentElement.style.setProperty('--vh', `${vh}px`);
+      }
+    
+      // Run it on load
+      window.addEventListener('load', setVH);
+      // Run it on resize (keyboard open, orientation change, etc.)
+      window.addEventListener('resize', setVH);
     </script>
 
   </body>
